refactor: Refactoring mappers