@@ -5,9 +5,9 @@ import com.catodev.literalura.dto.Author;
 import com.catodev.literalura.model.BookEntity;
 import com.catodev.literalura.model.AuthorEntity;
 import com.catodev.literalura.repository.AuthorRepository;
-import com.catodev.literalura.repository.BookRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
+
 import java.util.Collections;
 import java.util.List;
 
@@ -15,9 +15,8 @@ import java.util.List;
 @Component
 public class BookMapper {
     private final AuthorRepository authorRepository;
-    private final BookRepository bookRepository;
+    private final AuthorMapper authorMapper;  // ← Inyectar AuthorMapper
 
-    //Maps book DTO to its corresponding entity
     public BookEntity toEntity(Book dto) {
         if (dto == null) {
             return null;
@@ -29,18 +28,16 @@ public class BookMapper {
         entity.setCopyright(dto.copyright());
         entity.setDownloadCount(dto.downloadCount());
 
-        // Sets author properties when author exists
+        // Mapear autor usando AuthorMapper
         if (dto.authors() != null && !dto.authors().isEmpty()) {
             Author authorDto = dto.authors().get(0);
+
             // Buscar autor existente por nombre
             AuthorEntity authorEntity = authorRepository
                     .findByName(authorDto.name())
                     .orElseGet(() -> {
-                        // Si no existe, crear uno nuevo
-                        AuthorEntity newAuthor = new AuthorEntity();
-                        newAuthor.setName(authorDto.name());
-                        newAuthor.setBirthYear(authorDto.birth_year());
-                        newAuthor.setDeathYear(authorDto.death_year());
+                        // Si no existe, crear uno nuevo usando el mapper
+                        AuthorEntity newAuthor = authorMapper.toEntity(authorDto);
                         return authorRepository.save(newAuthor);
                     });
 
@@ -49,24 +46,15 @@ public class BookMapper {
         return entity;
     }
 
-    //Maps book entity to its corresponding DTO
     public Book toDto(BookEntity entity) {
         if (entity == null) {
             return null;
         }
 
-        List<Author> authors = Collections.emptyList();
-
-        // Mapear el autor si existe
-        if (entity.getAuthor() != null) {
-            AuthorEntity authorEntity = entity.getAuthor();
-            Author authorDto = new Author(
-                    authorEntity.getName(),
-                    authorEntity.getBirthYear(),
-                    authorEntity.getDeathYear()
-            );
-            authors = List.of(authorDto);
-        }
+        // Usar AuthorMapper para convertir el autor
+        List<Author> authors = entity.getAuthor() != null
+                ? List.of(authorMapper.toDto(entity.getAuthor()))
+                : Collections.emptyList();
 
         return new Book(
                 entity.getTitle(),
@@ -77,7 +65,6 @@ public class BookMapper {
         );
     }
 
-    //Maps a list of book entities to a list of DTOs
     public List<Book> toDtoList(List<BookEntity> entities) {
         if (entities == null) {
             return Collections.emptyList();
